doc/src/content/docs/en/0.7.x/api/link/remote.mdx
---
title: Remote
description: Remote Link that connects over TCP to a separate host wired to the
  real hardware
sidebar:
  order: 5
slug: en/0.7.x/api/link/remote
---

import CodeTabs from "@components/CodeTabs.astro";
import Install from "@components/Install.astro";

`RemoteLink` is a Link implementation that connects over TCP to a separate host connected to the AUTD3 devices for sending and receiving.
Use it when the machine that operates AUTD3 differs from the machine wired to the real hardware.

<Install rust="autd3-rs-link-remote" python="autd3-link-remote" csharp="AUTD3.Link.Remote" />

Connection to the [`Simulator`](/autd3-sdk/en/0.7.x/guide/simulator/) is also done with `RemoteLink`.

## API

### RemoteLink

<CodeTabs rust={"RemoteLinkOption { addr, timeout };"} python={"RemoteLinkOption(addr, timeout)"} csharp={"new RemoteLinkOption(addr, timeout);"} />

| Field      | Type               | Description                |
| ---------- | ------------------ | -------------------------- |
| `addr`     | `SocketAddr`       | address of the server to connect to |
| `timeout`  | `Option<Duration>` | how long to wait on the connect and on every frame. `None` leaves the OS defaults. |

### Discovery

The server can be found over mDNS.

<CodeTabs rust={"RemoteLinkOption::discover()?;"} python={"RemoteLinkOption.discover()"} csharp={"RemoteLinkOption.Discover();"} />

Finding no server, and finding more than one, are both errors.
The error for the latter lists what was found, so one of them can be picked with `discover_with`.

<CodeTabs rust={"RemoteLinkOption::discover_with(&DiscoveryOption {\n    timeout,\n    instance: Some(\"autd3-0a1b2c3d\".to_string()),\n    ..Default::default()\n})?;"} python={"RemoteLinkOption.discover(timeout, \"autd3-0a1b2c3d\")"} csharp={"RemoteLinkOption.Discover(timeout, \"autd3-0a1b2c3d\");"} />

| Field      | Type             | Description                                                        |
| ---------- | ---------------- | ------------------------------------------------------------------ |
| `timeout`  | `Duration`       | how long to wait for answers. 2 seconds by default.                |
| `instance` | `Option<String>` | name of the server to look for. `None` means every server          |

Use `discover_all` when only the list is wanted.

<CodeTabs rust={"for appliance in autd3_rs_link_remote::discover_all(&DiscoveryOption::default())? {\n    println!(\"{} at {}\", appliance.instance, appliance.addr);\n}"} />

## RemoteServer

`RemoteServer` lets you run the server that `RemoteLink` connects to yourself.

On the server-side host, also add the package of the Link that drives the real hardware (such as [Echocat](/autd3-sdk/en/0.7.x/api/link/echocat/)).

Pass the listening settings and a closure that opens the real-hardware link to `RemoteServer::new`,
then call `serve` to start relaying.

The device count of the client's `Geometry` has to match the device count of the bus on the server.

Setting `rt_priority` may require privileges (`CAP_SYS_NICE` on Linux).
Without them the server warns and runs with plain scheduling, which may make the bus unstable under load.

For a real example, see the [appliance documentation](/autd3-sdk/en/0.7.x/guide/appliance/) and the [appliance implementation](https://github.com/shinolab/autd3-sdk/tree/main/appliance).

<CodeTabs rust={"let bus = BusOption {\n    pacing,\n    rt_priority,\n    rt_policy,\n    rt_affinity,\n    stack_prefault_bytes,\n    ..Default::default()\n};\nlet option = RemoteServerOption {\n    bind,\n    bus,\n    idle_timeout,\n    ..Default::default()\n};\nRemoteServer::new(option, |_: &[DeviceLayout]| {\n    EchocatLink::open(&EchocatLinkOption::default())\n        .map_err(|e| RemoteLinkError::Link(e.to_string()))\n})?\n.serve()?;"} />

| Parameter | Type                                          | Description                                        |
| --------- | --------------------------------------------- | -------------------------------------------------- |
| `option`  | `RemoteServerOption`                          | listening address and bus thread settings          |
| `factory` | `FnMut(&[DeviceLayout]) -> Result<impl Link>` | closure that opens the real-hardware link          |

### RemoteServerOption

| Field          | Type         | Description                                                            |
| -------------- | ------------ | ---------------------------------------------------------------------- |
| `bind`         | `SocketAddr` | TCP address on which the server listens                                |
| `bus`          | `BusOption`  | bus thread settings                                                    |
| `idle_timeout` | `Duration`   | how long a session may go without traffic before it is dropped. 10 seconds by default |

### BusOption

| Field         | Type                     | Description                                                                              |
| ------------- | ------------------------ | ---------------------------------------------------------------------------------------- |
| `pacing`      | `BusPacing`              | EtherCAT bus cycle period. Leave the pacing to the link with `LinkPaced` for a real-hardware link |
| `rt_priority` | `Option<RtPriority>` | priority of the bus thread. A real-time priority by default                              |
| `rt_policy`   | `RtSchedulePolicy`       | scheduling policy of the bus thread                                                      |
| `rt_affinity` | `Option<CoreId>`         | CPU core to pin the bus thread to                                                        |
| `stack_prefault_bytes` | `usize`         | bytes of the bus thread stack to page in at start-up. 0 by default                       |
